--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="blog.html">Blog</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
               <li>
-                <a href="" class="but">Contact Me</a>
+                <a href="contact.html" class="but">Contact Me</a>
               </li>
             </ul>
           </div>
@@ -147,6 +147,19 @@
             <p class="footer-p">
               Copyright 2022 Literacy Blog. All Rights Reserved.
             </p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 27.6 26.075"
+              width="24px"
+              style="fill: currentColor"
+            >
+              <g>
+                <path
+                  d="M0 .586L4.83 0l3.549 10.207L12.716.39h2.169l4.337 9.622L22.771-.001l4.83.586-6.752 18.7H18.68L13.8 9.134 8.921 19.282H6.752z"
+                ></path>
+                <path d="M25.761 26.075h-24.1v-5.1h24.1z" fill="#f26522"></path>
+              </g>
+            </svg>
             <p class="footer-p2">
               Website Created & Hosted with Website.com Website Builder
             </p>
