--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
-    <div>
+    <div class="container">
       <header>
         <div class="menu">
           <div class="img">
@@ -26,6 +30,7 @@
               </li>
             </ul>
           </div>
+          <i class="fa-solid fa-bars header-hamburger"></i>
         </div>
       </header>
 
